<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:context=".activity.VideoComposeActivity">

	<Button
		android:id="@+id/btn_select_video"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/select_video"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.exoplayer2.ui.PlayerView
		android:id="@+id/player"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/btn_select_video" />

	<Button
		android:id="@+id/btn_select_audio"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/select_audio"
		app:layout_constraintTop_toBottomOf="@id/player" />

	<LinearLayout
		android:id="@+id/ll_audio"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		app:layout_constraintTop_toBottomOf="@+id/btn_select_audio">

		<ImageView
			android:id="@+id/img_audio_play"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:contentDescription="@string/play_audio"
			android:focusable="true"
			android:src="@drawable/ic_play" />

		<com.google.android.material.slider.Slider
			android:id="@+id/slide_audio"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:value="0" />

		<TextView
			android:id="@+id/tv_audio_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/time_zero"
			android:textAlignment="textEnd" />
	</LinearLayout>

	<Button
		android:id="@+id/btn_start_compose"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/start_compose"
		app:layout_constraintTop_toBottomOf="@id/ll_audio" />

	<TextView
		android:id="@+id/tv_tips"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/video_compose_tips"
		app:layout_constraintTop_toBottomOf="@id/btn_start_compose" />
</androidx.constraintlayout.widget.ConstraintLayout>
