<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:context=".activity.VideoExtractActivity">

	<LinearLayout
		android:id="@+id/ll_source"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/video_source" />

		<Spinner
			android:id="@+id/spinner"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/video_source" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ll_path"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/ll_source">

		<TextView
			android:id="@+id/tv_video_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/video_address" />

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_video_address"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="textWebEditText" />

		<Button
			android:id="@+id/btn_select_video"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:elevation="0dp"
			android:text="@string/select_video" />
	</LinearLayout>

	<com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
		android:id="@+id/player"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/ll_path" />

	<Button
		android:id="@+id/btn_extract_audio"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/extract_audio"
		app:elevation="0dp"
		app:layout_constraintTop_toBottomOf="@+id/player" />

	<Button
		android:id="@+id/btn_extract_video"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/extract_video"
		app:elevation="0dp"
		app:layout_constraintTop_toBottomOf="@+id/btn_extract_audio" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/notice_extract"
		android:textColor="@android:color/secondary_text_light"
		app:layout_constraintTop_toBottomOf="@+id/btn_extract_video" />

</androidx.constraintlayout.widget.ConstraintLayout>
