<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	tools:context=".activity.VideoSwitchActivity">

	<Button
		android:id="@+id/btn_select_video"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/select_video"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.exoplayer2.ui.PlayerView
		android:id="@+id/video_view"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/btn_select_video" />

	<LinearLayout
		android:id="@+id/ll_formats"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/video_view">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:text="@string/select_format_" />

		<Spinner
			android:id="@+id/spinner_format"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:entries="@array/video_formats" />
	</LinearLayout>

	<Button
		android:id="@+id/btn_switch"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/start_switch"
		app:layout_constraintTop_toBottomOf="@+id/ll_formats" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/tips_switch"
		app:layout_constraintTop_toBottomOf="@+id/btn_switch" />
</androidx.constraintlayout.widget.ConstraintLayout>
