<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.VideoCaptureActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp">

			<Button
				android:id="@+id/btn_select_video"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/select_video"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.exoplayer2.ui.PlayerView
				android:id="@+id/video_view"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toBottomOf="@+id/btn_select_video" />

			<Button
				android:id="@+id/btn_capture"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/shot_current"
				app:layout_constraintTop_toBottomOf="@+id/video_view" />

			<TextView
				android:id="@+id/tv_tips"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/tips_capture"
				app:layout_constraintTop_toBottomOf="@+id/btn_capture" />

			<ImageView
				android:id="@+id/iv_preview"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:layout_marginTop="16dp"
				android:background="@drawable/view_preview_placeholder"
				android:contentDescription="@string/shot_preview"
				app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

			<Button
				android:id="@+id/btn_save_img"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/save_capture"
				app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="20dp" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="20dp" />

	<androidx.constraintlayout.widget.Barrier
		android:id="@+id/barrier2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:barrierDirection="top" />
</androidx.constraintlayout.widget.ConstraintLayout>
